--- a/src/main/resources/templates/member/detail.html
+++ b/src/main/resources/templates/member/detail.html
@@ -1,14 +1,17 @@
 <!doctype html>
-<html lang="en" xmlns:th = "http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>member home</title>
+    <title>member detail</title>
 </head>
 <body>
-  <div th:replace="member/header :: headerFragment"></div>
-  <div>홈 화면 입니다.</div>
+  <table>
+      <tr><td>name</td><td>joon</td></tr>
+      <tr><td>email</td><td>joon@naver.com</td></tr>
+      <tr><td>password</td><td>12341234</td></tr>
+  </table>
 </body>
 </html>
