--- a/src/main/resources/templates/member/home.html
+++ b/src/main/resources/templates/member/home.html
@@ -5,14 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>member detail</title>
+    <title>home</title>
 </head>
 <body>
 <div th:replace="member/header :: headerFragment"></div>
-  <table>
-    <tr><td>name</td><td>joon</td></tr>
-    <tr><td>email</td><td>joon@naver.com</td></tr>
-    <tr><td>password</td><td>12341234</td></tr>
-  </table>
+<div>홈 화면 입니당</div>
 </body>
 </html>
