--- a/src/main/resources/templates/member/list.html
+++ b/src/main/resources/templates/member/list.html
@@ -8,17 +8,17 @@
     <title>member list</title>
 </head>
 <body>
-  <div th:replace="member/header :: headerFragment"></div>
+<div th:replace="member/header :: headerFragment"></div>
   <table>
-    <thead>
-      <tr>
-        <th>id</th>
-        <th>이름</th>
-        <th>이메일</th>
-      </tr>
-    </thead>
+     <thead>
+        <tr>
+          <th>id</th>
+          <th>이름</th>
+          <th>이메일</th>
+        </tr>
+     </thead>
     <tbody>
-      <tr th:each = "member : ${modelList}">
+      <tr th:each="member : ${memberList}">
         <td th:text="${member.id}"></td>
         <td th:text="${member.name}"></td>
         <td th:text="${member.email}"></td>
