--- a/src/main/resources/templates/member/header.html
+++ b/src/main/resources/templates/member/header.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div th:fragment="headerFragment">
-        <a href="/pracmember/list">회원목록조회</a>
-        <a href="/pracmember/create">회원등록</a>
+        <a href="/newprac1/lists">회원목록조회</a>
+        <a href="/newprac1/create">회원등록</a>
     </div>
 </body>
 </html>
