--- a/src/main/resources/templates/member/create.html
+++ b/src/main/resources/templates/member/create.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th = "http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -8,11 +8,12 @@
     <title>member create</title>
 </head>
 <body>
-  <form action="/pracmember/create" method="post" enctype="application/x-www-form-urlencoded">
-    이름 : <input type="text" name="name">
-    이메일 : <input type="text" name="email">
-    비밀번호 : <input type="password" name="password">
-    <button type="submit">제출</button>
-  </form>
+    <div th:replace="member/header :: headerFragment"></div>
+    <form action="/newprac1/create" method="post" enctype="application/x-www-form-urlencoded">
+      이름 : <input type="text" name="name"> <br>
+      이메일 : <input type="text" name="email"> <br>
+      비밀번호 : <input type="text" name="password"> <br>
+      <input type="submit" value="제출">
+    </form>
 </body>
 </html>
