--- a/src/main/resources/templates/member/detail.html
+++ b/src/main/resources/templates/member/detail.html
@@ -8,11 +8,11 @@
     <title>member detail</title>
 </head>
 <body>
-<div th:replace="member/header :: headerFragment"></div>
-  <table>
-      <tr><td>name</td><td th:text="${member.name}"></td></tr>
-      <tr><td>email</td><td th:text="${member.email}"></td></tr>
-      <tr><td>password</td><td th:text="member.password"></td></tr>
-  </table>
+    <div th:replace="member/header :: headerFragment"></div>
+    <table>
+      <tr><td>name</td><td th:text="${memberDetail.name}"></td></tr>
+      <tr><td>email</td><td th:text="${memberDetail.email}"></td></tr>
+      <tr><td>password</td><td th:text="${memberDetail.password}"></td></tr>
+    </table>
 </body>
 </html>
