--- a/src/main/resources/templates/member/detailPage.html
+++ b/src/main/resources/templates/member/detailPage.html
@@ -5,10 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>home</title>
+    <title>detail page</title>
 </head>
 <body>
-    <div th:replace="member/header :: headerFragment"></div>
-    <div>홈화면 입니당</div>
+  <div th:replace="member/header :: headerFragment"></div>
+  <table>
+    <tr><td>name</td><td th:text="${member.name}"></td></tr>
+    <tr><td>email</td><td th:text="${member.email}"></td></tr>
+    <tr><td>password</td><td th:text="${member.password}"></td></tr>
+  </table>
 </body>
 </html>
